# boss-agent-cli

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.en.md  CONTRIBUTING.md  README.en.md  README.md  ROADMAP.en.md  ROADMAP.md  SKILL.md  demo.tape  demo_showcase.py  pyproject.toml
.claude/: index.json
.github/workflows/: ci.yml  pages.yml  release.yml  sync.yml
demo/: index.html  main.js  style.css
demo/hyperframes-showcase/: DESIGN.md  README.md  index.html  package.json
docs/: agent-hosts.en.md  agent-quickstart.en.md  agent-quickstart.md  awesome-submissions.md  capability-matrix.en.md  capability-matrix.md  platform-risk.en.md  platform-risk.md  smoke-testing.md
docs/integrations/: python-sdk.md
mcp-server/: README.en.md  README.md
scripts/: smoke_p0.py
skills/boss-agent-cli/: SKILL.md
src/boss_agent_cli/: __init__.py  compliance.py  config.py  display.py  main.py  mcp_server.py  output.py  search_filters.py
src/boss_agent_cli/api/: boss.yaml  browser_client.py  client.py  endpoints.py  endpoints_loader.py  models.py  zhilian_client.py
src/boss_agent_cli/auth/: browser.py  health.py  manager.py  token_store.py
src/boss_agent_cli/bridge/: daemon.py
src/boss_agent_cli/cache/: store.py
src/boss_agent_cli/commands/: apply.py  chat.py  chat_export.py  chat_snapshot.py  chat_summary.py  chat_utils.py  chatmsg.py  cities.py  clean.py  detail.py  digest.py  doctor.py  exchange.py  export.py  greet.py  history.py  interviews.py  login.py  mark.py  me.py  pipeline.py  recommend.py  register.py  schema.py  search.py  show.py  status.py
src/boss_agent_cli/commands/recruiter/: applications.py  candidates.py  chat.py  jobs.py  reply.py  resume.py  resume_parser.py
src/boss_agent_cli/resume/: models.py
tests/: test_agent_docs.py  test_ai_commands.py  test_api.py  test_apply.py  test_auth.py  test_auth_and_login_extended.py  test_auth_browser.py  test_auth_manager_extended.py  test_auth_manager_flow.py  test_browser_client.py  test_cache.py  test_chatmsg_extended.py  test_clean_cmd.py  test_commands.py  test_compliance.py  test_contact_lookup.py  test_coverage_second_sprint.py  test_digest_command.py  test_display.py  test_doctor_extended.py  test_endpoints_loader.py  test_export_extended.py  test_greet_detail_extended.py  test_greet_extended.py  test_mcp_server.py  test_new_commands.py  test_open_source_docs.py  test_output.py  test_pipeline_commands.py  test_platform_base.py  test_platform_cli.py  test_public_api.py  test_qiancheng_stub.py  test_recruiter_commands.py  test_recruiter_endpoints.py  test_recruiter_platform.py  test_resume_commands.py  test_schema_contract.py  test_search_filters.py  test_smoke_p0.py  (+3 more)
