[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "boss-agent-cli"
version = "0.1.0"
description = "AI Agent 专用的 BOSS 直聘求职 CLI 工具"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
	"click>=8.0",
	"httpx>=0.27",
	"playwright>=1.40",
	"playwright-stealth>=1.0",
	"cryptography>=42.0",
	"patchright>=1.58.2",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
boss = "boss_agent_cli.main:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
