[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "boss-agent-cli"
version = "1.8.6"
description = "AI Agent 专用的 BOSS 直聘求职 CLI 工具"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
	{name = "can4hou6joeng4"},
]
keywords = ["boss-zhipin", "job-search", "ai-agent", "cli", "recruitment", "boss直聘"]
classifiers = [
	"Development Status :: 4 - Beta",
	"Environment :: Console",
	"Intended Audience :: Developers",
	"License :: OSI Approved :: MIT License",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Programming Language :: Python :: 3.13",
	"Topic :: Office/Business",
	"Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
	"click>=8.0",
	"httpx>=0.27",
	"cryptography>=42.0",
	"patchright>=1.58.2",
	"browser-cookie3>=0.16.2",
	"rich>=13.0",
	"pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/can4hou6joeng4/boss-agent-cli"
Repository = "https://github.com/can4hou6joeng4/boss-agent-cli"
Issues = "https://github.com/can4hou6joeng4/boss-agent-cli/issues"

[project.optional-dependencies]
dev = [
	"pytest>=7.0",
	"pytest-cov>=5.0",
	"ruff>=0.4",
	"pre-commit>=3.0",
	"mypy>=1.20",
	"types-PyYAML>=6.0",
]
bridge = [
	"aiohttp>=3.9",
]

[project.scripts]
boss = "boss_agent_cli.main:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 120
indent-width = 4

[tool.mypy]
python_version = "3.10"
# 渐进接入：仅跑基础类型检查，允许现有未注解函数存在
# 目标：先覆盖报错→逐模块消化→最终切 --strict
ignore_missing_imports = true
check_untyped_defs = false
warn_unused_ignores = true
warn_redundant_casts = true
exclude = [
	"^build/",
	"^dist/",
	"^\\.venv/",
]

# 逐模块严格化：已覆盖率 100% 的核心工具模块先严起来
[[tool.mypy.overrides]]
module = [
	"boss_agent_cli.output",
	"boss_agent_cli.config",
	"boss_agent_cli.hooks",
	"boss_agent_cli.digest",
	"boss_agent_cli.match_score",
	"boss_agent_cli.pipeline_state",
	"boss_agent_cli.index_cache",
]
disallow_untyped_defs = true
disallow_any_generics = true
warn_return_any = true

[dependency-groups]
dev = [
    "mypy>=1.20.1",
    "types-pyyaml>=6.0.12.20260408",
]
